--- a/Python Script and Results Files/Customer_Segmentation_Recommendatation.ipynb
+++ b/Python Script and Results Files/Customer_Segmentation_Recommendatation.ipynb
@@ -1496,7 +1496,7 @@
     "wcss = []\n",
     "\n",
     "# Create a for-loop where each value of k is evaluated using the K-means algorithm\n",
-    "# Fit the model using the service_ratings DataFrame\n",
+    "# Fit the model using the PCA DataFrame\n",
     "# Append the value of the computed inertia from the `inertia_` attribute of the KMeans model instance\n",
     "\n",
     "for i in range(1, 11):\n",
